Refactoring, ConsumerPrepare class removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ if(NOT CONAN_DISABLE)
             BUILD outdated)
 endif()
 
-add_executable(kafkaCow main.cpp ConsumerPrepare.cpp ConsumerPrepare.h RequestHandler.cpp RequestHandler.h ConnectKafka.cpp ConnectKafka.h)
+add_executable(kafkaCow main.cpp  RequestHandler.cpp RequestHandler.h ConnectKafka.cpp ConnectKafka.h)
 target_link_libraries(kafkaCow CONAN_PKG::cli11 CONAN_PKG::librdkafka)
