--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,9 @@ endif()
 
 add_subdirectory(src)
 add_subdirectory(test)
+
+if(CMAKE_COMPILER_IS_GNUCXX AND COV)
+    include(CodeCoverage)
+    setup_target_for_coverage(coverage UnitTests coverage)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_COVERAGE}")
+endif()
