Retrieving offsets test, refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(NOT CONAN_DISABLE)
     include(${CMAKE_MODULE_PATH}/conan.cmake)
     conan_cmake_run(CONANFILE conanfile.txt
             PROFILE default
-            BASIC_SETUP CMAKE_TARGETS
+            BASIC_SETUP CMAKE_TARGETS SKIP_RPATH
             BUILD_TYPE "None"
             BUILD outdated)
 endif()
