RE #1 implemented requested changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_executable(kafkaCow main.cpp
         RequestHandler.cpp
         RequestHandler.h
-        RequestHandlerParentClass.h
+        RequestHandlerInterface.h
         ConnectKafka.cpp
         ConnectKafka.h
-        ConnectKafkaParentClass.h
-        ConnectKafkaFakeTestClass.cpp
-        ConnectKafkaFakeTestClass.h)
+        ConnectKafkaInterface.h
+        ConnectKafkaFake.cpp
+        ConnectKafkaFake.h)
 target_link_libraries(kafkaCow CONAN_PKG::cli11 CONAN_PKG::librdkafka)
