RE #2 added methods that handle user's input

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,5 +6,10 @@ add_executable(kafkaCow main.cpp
         ConnectKafka.h
         ConnectKafkaInterface.h
         ConnectKafkaFake.cpp
-        ConnectKafkaFake.h)
+        ConnectKafkaFake.h
+        ArgumentsException.h
+        UserArgumentsStruct.h
+        OffsetsStruct.h
+        TopicMetadataStruct.h
+        )
 target_link_libraries(kafkaCow CONAN_PKG::cli11 CONAN_PKG::librdkafka)
