RE #4 schemas saved to build directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ endif()
 
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 
+file(GLOB listOfSchemas "${PROJECT_SOURCE_DIR}/streaming-data-types/schemas/*.fbs" )
+message(${listOfSchemas})
+list(REMOVE_DUPLICATES listOfSchemas)
+foreach(schema ${listOfSchemas})
+    configure_file(${schema} "${CMAKE_CURRENT_BINARY_DIR}/schemas" COPYONLY)
+endforeach()
+
 if(NOT CONAN_DISABLE)
     include(${CMAKE_MODULE_PATH}/conan.cmake)
     conan_cmake_run(CONANFILE conanfile.txt
