#9 get, add and reuse schemas to read messages

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,4 +10,6 @@ add_executable(UnitTests RequestHandlerTest.cpp ${SRC_FILES})
 target_link_libraries(UnitTests
         CONAN_PKG::gtest
         CONAN_PKG::cli11
-        CONAN_PKG::librdkafka)
+        CONAN_PKG::librdkafka
+        CONAN_PKG::boost_filesystem
+        CONAN_PKG::FlatBuffers)
