--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "streaming-data-types"]
 	path = streaming-data-types
-	url = git@github.com:ess-dmsc/streaming-data-types.git
+	url = https://github.com/ess-dmsc/streaming-data-types.git
 	branch = master
