--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,8 @@ file(GLOB SRC_FILES
 list(FILTER SRC_FILES EXCLUDE REGEX ".*main.cpp$")
 list(FILTER SRC_FILES EXCLUDE REGEX ".*ConnectKafka.cpp$")
 
-add_executable(UnitTests RequestHandlerTest.cpp ${SRC_FILES})
+add_executable(UnitTests RequestHandlerTest.cpp ${SRC_FILES}
+        FlatbuffersTranslatorTest.cpp ${SRC_FILES})
 
 target_link_libraries(UnitTests
         CONAN_PKG::gtest
@@ -14,4 +15,3 @@ target_link_libraries(UnitTests
         CONAN_PKG::boost_filesystem
         CONAN_PKG::FlatBuffers
         CONAN_PKG::spdlog)
-
