--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,10 +13,12 @@ add_executable(kafkaCow main.cpp
         TopicMetadataStruct.h
         FlatbuffersTranslator.cpp
         FlatbuffersTranslator.h
-        )
+        JSONPrinting.cpp
+        JSONPrinting.h)
 target_link_libraries(kafkaCow CONAN_PKG::cli11
         CONAN_PKG::librdkafka
         CONAN_PKG::FlatBuffers
         CONAN_PKG::boost_filesystem
         CONAN_PKG::spdlog
-        CONAN_PKG::yaml-cpp)
+        CONAN_PKG::yaml-cpp
+        CONAN_PKG::jsonformoderncpp)
