--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,5 +14,6 @@ target_link_libraries(UnitTests
         CONAN_PKG::boost_filesystem
         CONAN_PKG::FlatBuffers
         CONAN_PKG::spdlog
-        CONAN_PKG::yaml-cpp)
+        CONAN_PKG::yaml-cpp
+        CONAN_PKG::jsonformoderncpp)
 
