--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ list(FILTER SRC_FILES EXCLUDE REGEX ".*main.cpp$")
 list(FILTER SRC_FILES EXCLUDE REGEX ".*ConnectKafka.cpp$")
 
 add_executable(UnitTests RequestHandlerTest.cpp ${SRC_FILES}
-        FlatbuffersTranslatorTest.cpp ${SRC_FILES})
+        FlatbuffersTranslatorTest.cpp ${SRC_FILES} JSONPrintingTest.cpp)
 
 target_link_libraries(UnitTests
         CONAN_PKG::gtest
