#27 Get schemas from github at runtime

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,11 +14,16 @@ add_executable(kafkacow main.cpp
         FlatbuffersTranslator.cpp
         FlatbuffersTranslator.h
         JSONPrinting.cpp
-        JSONPrinting.h)
-target_link_libraries(kafkacow CONAN_PKG::cli11
+        JSONPrinting.h
+        UpdateSchemas.cpp
+        UpdateSchemas.h)
+
+target_link_libraries(kafkacow
+        CONAN_PKG::cli11
         CONAN_PKG::librdkafka
         CONAN_PKG::FlatBuffers
         CONAN_PKG::boost_filesystem
         CONAN_PKG::spdlog
         CONAN_PKG::yaml-cpp
-        CONAN_PKG::jsonformoderncpp)
+        CONAN_PKG::jsonformoderncpp
+        CONAN_PKG::libgit2)
