--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,4 +16,5 @@ target_link_libraries(UnitTests
         CONAN_PKG::FlatBuffers
         CONAN_PKG::spdlog
         CONAN_PKG::yaml-cpp
-        CONAN_PKG::jsonformoderncpp)
+        CONAN_PKG::jsonformoderncpp
+        CONAN_PKG::libgit2)
