re #56 move away from DATE library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,5 +21,4 @@ target_link_libraries(kafkacow CONAN_PKG::cli11
         CONAN_PKG::spdlog
         CONAN_PKG::yaml-cpp
         CONAN_PKG::jsonformoderncpp
-        CONAN_PKG::fmt
-        CONAN_PKG::date)
+        CONAN_PKG::fmt)
