--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,6 +16,8 @@ target_link_libraries(UnitTests
         CONAN_PKG::cli11
         CONAN_PKG::librdkafka
         CONAN_PKG::boost_filesystem
+        CONAN_PKG::boost_system
+        CONAN_PKG::boost_dll
         CONAN_PKG::FlatBuffers
         CONAN_PKG::spdlog
         CONAN_PKG::yaml-cpp
