--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,14 +3,16 @@ file(GLOB SRC_FILES
         ../src/*.h)
 
 list(FILTER SRC_FILES EXCLUDE REGEX ".*main.cpp$")
-list(FILTER SRC_FILES EXCLUDE REGEX ".*ConnectKafka.cpp$")
+list(FILTER SRC_FILES EXCLUDE REGEX ".*Consumer.cpp$")
 
 add_executable(UnitTests
         ${SRC_FILES}
         RequestHandlerTest.cpp
         FlatbuffersTranslatorTest.cpp
         JSONPrintingTest.cpp
-        UnitTests.cpp)
+        UnitTests.cpp
+../src/KafkaW/FakeConsumer.cpp
+../src/KafkaW/FakeConsumer.h)
 
 target_link_libraries(UnitTests
         CONAN_PKG::gtest
