use schema conan packages for producing messages

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,4 +34,5 @@ target_link_libraries(kafkacow CONAN_PKG::cli11
         CONAN_PKG::spdlog
         CONAN_PKG::jsonformoderncpp
         CONAN_PKG::libgit2
-        CONAN_PKG::fmt)
+        CONAN_PKG::fmt
+        CONAN_PKG::streaming-data-types)
