--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,30 +1,18 @@
 file(GLOB SRC_FILES
         ../src/*.cpp
-        ../src/*.h)
+        ../src/*.h
+        ../src/KafkaW/*.cpp
+        ../src/KafkaW/*.h
+)
 
 list(FILTER SRC_FILES EXCLUDE REGEX ".*main.cpp$")
-list(FILTER SRC_FILES EXCLUDE REGEX ".*Consumer*.cpp$")
-list(FILTER SRC_FILES EXCLUDE REGEX ".*Producer*.cpp$")
-
 
 add_executable(UnitTests
         ${SRC_FILES}
         RequestHandlerTest.cpp
         FlatbuffersTranslatorTest.cpp
         JSONPrintingTest.cpp
-        UnitTests.cpp
-        ../src/KafkaW/FakeConsumer.cpp
-        ../src/KafkaW/FakeConsumer.h
-        ../src/KafkaW/Consumer.h
-        ../src/KafkaW/Consumer.cpp
-        ../src/KafkaW/ConsumerFactory.h
-        ../src/KafkaW/ConsumerFactory.cpp
-        ../src/KafkaW/Producer.h
-        ../src/KafkaW/Producer.cpp
-        ../src/KafkaW/ProducerFactory.h
-        ../src/KafkaW/ProducerFactory.cpp
-        ../src/KafkaW/FakeProducer.cpp
-        ../src/KafkaW/FakeProducer.h)
+        UnitTests.cpp)
 
 target_link_libraries(UnitTests
         ${CONAN_PACKAGES}
