--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_executable(kafkacow main.cpp
         RequestHandler.cpp
         RequestHandler.h
-        KafkaW/Consumer.cpp
-        KafkaW/Consumer.h
-        KafkaW/ConsumerInterface.h
-        KafkaW/FakeConsumer.cpp
-        KafkaW/FakeConsumer.h
+Kafka/Consumer.cpp
+Kafka/Consumer.h
+Kafka/ConsumerInterface.h
+Kafka/FakeConsumer.cpp
+Kafka/FakeConsumer.h
         CustomExceptions.h
         UserArgumentsStruct.h
         OffsetsStruct.h
@@ -16,14 +16,14 @@ add_executable(kafkacow main.cpp
         JSONPrinting.h
         UpdateSchemas.cpp
         UpdateSchemas.h
-        KafkaW/Producer.cpp
-        KafkaW/Producer.h
-        KafkaW/KafkaConfig.h
-        KafkaW/ConsumerFactory.cpp
-        KafkaW/ConsumerFactory.h
-        KafkaW/ProducerInterface.h
-        KafkaW/ProducerFactory.cpp
-        KafkaW/ProducerFactory.h KafkaW/FakeProducer.cpp KafkaW/FakeProducer.h KafkaW/Message.h)
+Kafka/Producer.cpp
+Kafka/Producer.h
+Kafka/KafkaConfig.h
+Kafka/ConsumerFactory.cpp
+Kafka/ConsumerFactory.h
+Kafka/ProducerInterface.h
+Kafka/ProducerFactory.cpp
+Kafka/ProducerFactory.h Kafka/FakeProducer.cpp Kafka/FakeProducer.h Kafka/Message.h)
 
 target_link_libraries(kafkacow
         ${CONAN_PACKAGES}
