--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB SRC_FILES
         ../src/*.cpp
         ../src/*.h
-../src/Kafka/*.cpp
-../src/Kafka/*.h
+        ../src/Kafka/*.cpp
+        ../src/Kafka/*.h
 )
 
 list(FILTER SRC_FILES EXCLUDE REGEX ".*main.cpp$")
@@ -12,7 +12,8 @@ add_executable(UnitTests
         RequestHandlerTest.cpp
         FlatbuffersTranslatorTest.cpp
         JSONPrintingTest.cpp
-        UnitTests.cpp)
+        UnitTests.cpp
+        MessageTest.cpp)
 
 target_link_libraries(UnitTests
         ${CONAN_PACKAGES}
