add hinnant date lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,4 +30,5 @@ add_executable(kafkacow main.cpp
 
 target_link_libraries(kafkacow
         ${CONAN_PACKAGES}
-        CONAN_PKG::fmt)
+        CONAN_PKG::fmt
+        CONAN_PKG::date)
