use date lib in tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,8 @@ set(CONAN_PACKAGES
     CONAN_PKG::spdlog
     CONAN_PKG::jsonformoderncpp
     CONAN_PKG::libgit2
-    CONAN_PKG::streaming-data-types)
+    CONAN_PKG::streaming-data-types
+    CONAN_PKG::date)
 
 add_subdirectory(src)
 add_subdirectory(test)
