--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,5 +30,4 @@ add_executable(kafkacow main.cpp
 
 target_link_libraries(kafkacow
         ${CONAN_PACKAGES}
-        CONAN_PKG::fmt
-        CONAN_PKG::date)
+        CONAN_PKG::fmt)
