--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,5 +33,6 @@ target_link_libraries(kafkacow PRIVATE
         ${CONAN_PACKAGES}
         CONAN_PKG::fmt)
 
-# Link stdc++fs to get std::experimental::filesystem when necessary
+# Link stdc++fs or c++experimental to get std::experimental::filesystem when necessary
 target_link_libraries(kafkacow PRIVATE $<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:stdc++fs>)
+target_link_libraries(kafkacow PRIVATE $<$<AND:$<CXX_COMPILER_ID:AppleClang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,11.0>>:c++experimental>)
