Link c++fs when using AppleClang < version 11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,4 +35,4 @@ target_link_libraries(kafkacow PRIVATE
 
 # Link stdc++fs or c++experimental to get std::experimental::filesystem when necessary
 target_link_libraries(kafkacow PRIVATE $<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:stdc++fs>)
-target_link_libraries(kafkacow PRIVATE $<$<AND:$<CXX_COMPILER_ID:AppleClang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,11.0>>:c++experimental>)
+target_link_libraries(kafkacow PRIVATE $<$<AND:$<CXX_COMPILER_ID:AppleClang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,11.0>>:c++fs>)
