Update gtest and json libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ set(CONAN_PACKAGES
     CONAN_PKG::spdlog
     CONAN_PKG::jsonformoderncpp
     CONAN_PKG::streaming-data-types
-    CONAN_PKG::date)
+    CONAN_PKG::date
+    CONAN_PKG::imgui-sfml)
 
 add_subdirectory(src)
 add_subdirectory(test)
