Start adding a metadata struct

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,8 @@ add_executable(kafkacow main.cpp
         Kafka/FakeConsumer.h
         CustomExceptions.h
         UserArgumentsStruct.h
-        OffsetsStruct.h
+        Metadata.h
+        Metadata.cpp
         TopicMetadataStruct.h
         FlatbuffersTranslator.cpp
         FlatbuffersTranslator.h
