Make some methods const

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(kafkacow main.cpp
         UserArgumentsStruct.h
         Metadata.h
         Metadata.cpp
+        tictoc.h
         TopicMetadataStruct.h
         FlatbuffersTranslator.cpp
         FlatbuffersTranslator.h
